Fixed margin error on mobile landscape

--- a/app/assets/stylesheets/cruises.css
+++ b/app/assets/stylesheets/cruises.css
@@ -446,8 +446,8 @@ h2{
 
   #price{
     font-size: 47px;
-    padding-left: 200px;
-    margin-right: 100px;
+    padding-left: 140px;
+    margin-right: 35px;
     float: right;
     background: linear-gradient(#ff9900 0%, #ff7600 100%);
   }
